--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,9 @@
 <div>
 <% @products.each do |product| %> 
     <div>
+      <a href="/products/<%= product.id %>">
         <%= product.name %>
+      </a>
     </div>
 <% end %>
 </div>
